[gd_scene load_steps=6 format=3 uid="uid://cf8meu1mhq87n"]

[ext_resource type="Script" path="res://level_0/scripts/enemy_ufo.gd" id="1_levkx"]
[ext_resource type="Texture2D" uid="uid://e8lc7tpu54j1" path="res://level_0/sprites/PH_ufo.png" id="2_ck654"]
[ext_resource type="PackedScene" uid="uid://bri7cldadmuvc" path="res://general/scenes/addcolor_polygon.tscn" id="3_jp4at"]
[ext_resource type="AudioStream" uid="uid://dmttog1tvwyy0" path="res://general/sfx/cc0_590037__mrfossy__sfx_massivelyincorrekt_08.mp3" id="4_obnx6"]
[ext_resource type="AudioStream" uid="uid://pvxppq65nj15" path="res://general/sfx/cc0_560124__steaq__a-teleportation.mp3" id="5_cvawo"]

[node name="EnemyUFO" type="Area2D"]
collision_layer = 32
collision_mask = 32
script = ExtResource("1_levkx")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(2.563e-06, -0.248015)
scale = Vector2(0.130595, 0.127399)
polygon = PackedVector2Array(15.3146, -123.643, 53.601, -115.794, 91.8874, -76.5469, 114.859, -37.3001, 176.118, 1.94676, 245.033, 64.7417, 137.831, 96.1392, 61.2583, 103.989, 38.2864, 119.687, -1.96256e-05, 127.537, -38.2864, 119.687, -68.9156, 96.1392, -122.517, 80.4405, -183.775, 56.8923, -237.376, 17.6455, -183.775, -21.6013, -99.5447, -52.9988, -68.9156, -100.095, -22.9719, -123.643)

[node name="PhUfo" type="Sprite2D" parent="CollisionPolygon2D"]
position = Vector2(-1.96256e-05, 1.94676)
scale = Vector2(0.983333, 1.008)
texture = ExtResource("2_ck654")

[node name="AddcolorPolygon" parent="CollisionPolygon2D" instance=ExtResource("3_jp4at")]
visible = false
position = Vector2(6695.43, 637.426)
scale = Vector2(0.976, 1)
color = Color(1, 0, 0, 1)

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_obnx6")
volume_db = -6.0
pitch_scale = 0.6

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_cvawo")
